added user following

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,9 @@
 			<section>
 				<%= render 'shared/user_info' %>
 			</section>
+			<secton>
+				<%= render 'shared/stats' %>
+			</section>
 			<section>
 				<%= render 'shared/micropost_form' %>
 			</section>
